--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
   <link rel="shortcut icon" href="assets/img/favicon.png">
-  <title>Admin - Trang chủ</title>
+  <title>Online Test</title>
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/plugins/font-awesome/font-awesome.min.css" rel="stylesheet">
   <link href="assets/plugins/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
